changed z-index of world_bol_container to fix get the app button not clickable bug

--- a/co2ok_dojo/co2ok_dojo/static/css/style.css
+++ b/co2ok_dojo/co2ok_dojo/static/css/style.css
@@ -919,7 +919,6 @@ and (max-width : 480px) {
 .world_bol_container
 {
     margin-top: -2%;
-    z-index: -1;
   width: 100%;
   height: 75%;
   display: flex;
